# libsnr

./: .pylintrc  CONTRIBUTING.md  DESIGN.md  Doxyfile  README.md  setup.cfg
.github/workflows/: codeql.yml
libsnr/: __init__.py  version.py
libsnr/core/: __init__.py  arch.py  common_paths.py  logging.py  options.py  variable_manager.py
libsnr/payload/: context.py  data_dir.py  safety_pin.py  storage.py  unix_group.py  unix_gshadow.py  unix_passwd.py  unix_shadow.py
libsnr/payload_generation/: common.py  finishing.py  formatting.py  grub_installation.py  partitioning.py  rootfs_preparation.py  satisfy_dependencies.py  target_check.py
libsnr/util/: at_formatter.py  chroot_program_wrapper.py  coloring.py  common_utils.py  program_wrapper.py  table.py
libsnr/util/payloads/: autorun.py  libsnr.py  systemd_networkd.py  systemd_service.py  systemd_target.py  systemd_unit.py
libsnr/util/programs/: __init__.py  debootstrap.py  mount.py  umount.py
