[metadata]
name = libsnr
version = attr: libsnr.version.__version__
url = https://github.com/GlobularOne/libsnr
author = Kamyar Hatamnezhad (GlobularOne)
author_email = GlobularOne@proton.me
description = Generate bootable payloads easily - Library
long_description = file: README.md
license = Apache-2.0
license_files =
    LICENSE

[options]
packages = find:
python_requires = >=3.10
